--- a/EcommerceApp2/frontend/src/index.css
+++ b/EcommerceApp2/frontend/src/index.css
@@ -18,6 +18,6 @@ h1, h2, h3, h4, h5, h6, label {
     font-family: 'Roboto', sans-serif;
 }
 
-span {
+span, button {
     font-family: 'Fredoka', sans-serif;
 }
