--- a/AmiShop/frontend/src/index.css
+++ b/AmiShop/frontend/src/index.css
@@ -1,23 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Poppins:wght@300;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Poppins:wght@700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Poppins:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Poppins:wght@700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  * {
+    @apply scrollbar-none;
+    /* @apply scrollbar-thin scrollbar-track-gray-200 scrollbar-thumb-gray-400; */
+  }
+}
 
 body {
-    font-family: 'Poppins', sans-serif;
-    background-color: #f0f8ff;
-    @apply bg-slate-100
+  font-family: "Poppins", sans-serif;
+  background-color: #f0f8ff;
+  @apply bg-slate-100;
 }
 
-h1, h2, h3, h4, h5, h6, label {
-    font-family: 'Roboto', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+label {
+  font-family: "Roboto", sans-serif;
 }
 
-span, button {
-    font-family: 'Fredoka', sans-serif;
+span,
+button {
+  font-family: "Fredoka", sans-serif;
 }
