Enhance order and product management features with UI improvements
- Added loading state management in CarouselDesktop for better user experience during data fetching.
- Updated product categories in get4CategoriesProduct to include "sarees" for expanded product visibility.
- Refactored product.controller.js to remove unnecessary required fields for description, improving flexibility.
- Enhanced CSS styles in index.css for better typography and visual consistency.
- Improved accessibility and responsiveness in various components, including CategoryFilterCard and PopularProduct.
- Removed obsolete ProductShowcase component to streamline the codebase.

These changes aim to improve product retrieval, enhance user experience, and maintain a clean codebase.

--- a/AmiShop/frontend/src/index.css
+++ b/AmiShop/frontend/src/index.css
@@ -29,6 +29,11 @@ label {
   font-family: "Roboto",Helvetica, Arial, sans-serif;
 }
 
+p {
+  font-family: "Roboto", serif;
+  color: #212121;
+}
+
 span,
 button {
   font-family: "Fredoka", sans-serif;
